# VoiceActions

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
example_wasm/: Cargo.toml
example_wasm/src/: lib.rs
src/: asr.rs  audio.rs  main.rs  tts.rs  wasm_runner.rs
wasm/echo/: Cargo.toml
wasm/echo/src/: lib.rs  main.rs
wasm/llm/: Cargo.toml
wasm/llm/src/: lib.rs
